--- a/style/style.css
+++ b/style/style.css
@@ -23,12 +23,14 @@
     font-size:32px ;
     font-weight:800 ;
     color: rgb(13, 19, 33);
+    line-height: 37px;
 }
 .text-description{
     font-size: 16px;
     font-weight: 400;
     color: rgb(13, 19, 33);
     opacity: 0.7;
+    line-height: 26px;
 }
 
 /* shared style end */
@@ -72,8 +74,7 @@
    margin: 0 auto;
   height: 652px;
    display: flex;
-   align-items: center;
-   justify-content: center;
+   align-items: center; 
    flex-direction: column;
    text-align: center;
 }
@@ -82,6 +83,7 @@ font-size: 48px;
 font-weight: 800;
 color: rgb(13, 19, 33);
 margin: 32px  24px;
+line-height: 68px;
 }
 .header-section-container button{ 
     margin-top: 32px; 
@@ -105,8 +107,6 @@ margin: 32px  24px;
  justify-content: center;
  align-items: center;
  border-radius: 16px;
- border-radius: 16px;
-
 background: rgba(13, 19, 33, 0.02);
  -webkit-border-radius: 16px;
  -moz-border-radius: 16px;
@@ -120,10 +120,11 @@ background: rgba(13, 19, 33, 0.02);
 }
  .development-section-text{
     display: flex;
-    justify-content: center;
+    width: 852px;
     align-items: center;
     text-align: center;
     flex-direction: column;
+    margin: 0 auto;
     
  }
  .development-section-text h3{
@@ -154,8 +155,7 @@ opacity: 0.7;
     display: flex;
     justify-content: space-between;
     border-radius: 16px;
-
-background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
    
  }
  .image-text-2{
@@ -167,7 +167,7 @@ background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 
 padding:48px ;
 
  }
- .image-text-2 img{
+   .image-text-2 img{
     margin-right: 32px;
     
  }
@@ -179,27 +179,78 @@ padding:48px ;
 }
 .vai-section-text{
 display: flex;
+width: 852px;
+margin: 0 auto;
 flex-direction: column;
-justify-content: center;
 text-align: center;
 align-items: center;
 }
 .vai-section-text p{
     margin: 24px 0 32px 0;
 }
-.vai-section-image{
-   
+.vai-section-image{ 
 border: 1px solid rgba(13, 19, 33, 0.2);
 border-radius: 16px;
-
-
 }
 .vai-section-image img{
 margin: 32px;
 }
-
 /* vai section end */
 /* language icons */
+.current-section{
+    margin-top: 151px;
+}
+.current-images-icons-container{
+display: flex;
+justify-content: space-between;
+}
+.current-section-container-text{
+    width: 852px;
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.current-section-container-text p{
+    margin: 24px 0 48px 0;
+}
+.current-image-icon h4{
+    font-size: 24px;
+    font-weight: 800;
+    color: rgb(13, 19, 33);
+    margin-bottom: 8px;
+    margin-top: 24px;
+}
+
+.current-image-icon a{
+    font-size: 16px;
+    font-weight: 700;
+    color: rgb(13, 19, 33);
+    margin-top: 24px;
+    display: inline-block;
+}
+.current-image-icon{
+    width: 32%;
+    padding: 40px;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
+.html{
+    background-color:rgba(255, 76, 30, 0.05) ;
+   
+}
+.css{
+    background-color: rgba(0, 76, 232, 0.05);
+    
+}
+.js{
+    background-color: rgba(255, 223, 0, 0.05);
+}
 .language-icons{
 margin-top: 111px;
 margin-bottom: 45px;
