--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,7 @@
     line-height: 37px;
 }
 .text-description{
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 400;
     color: rgb(13, 19, 33);
     opacity: 0.7;
@@ -62,7 +62,7 @@
 /* header section start */
 
 .header-section{
-    background-image: url(../images/Hero-bg.png);
+    background-image:linear-gradient(rgba(50, 48, 48, 0.072),rgba(58, 56, 56, 0.089)), url(../images/Hero-bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -70,7 +70,7 @@
    
 }
 .header-section-container{
-   width: 88%;
+   width: 60%;
    margin: 0 auto;
   height: 652px;
    display: flex;
@@ -79,11 +79,15 @@
    text-align: center;
 }
 .header-section-container h1{
-font-size: 48px;
+font-size: 40px;
 font-weight: 800;
 color: rgb(13, 19, 33);
 margin: 32px  24px;
 line-height: 68px;
+}
+.header-section-container p{
+    opacity: 1;
+    font-size: 20px;
 }
 .header-section-container button{ 
     margin-top: 32px; 
@@ -141,15 +145,20 @@ color: rgba(13, 19, 33, 0.7);
   margin: 24px 0 48px 0;
  }
  .text-2-container button{
-    font-size: 20px;
-    font-weight: 500;
-    color: rgb(13, 19, 33); 
-border: 1px solid rgb(13, 19, 33);
-opacity: 0.7;
+ font-size: 20px;
+ font-weight: 500;
+ color: rgb(13, 19, 33);
+ border: 1px solid rgb(13, 19, 33);
+ opacity: 0.7;
  padding: 12px 20px;
- background-color: #fff;
+ background-color: rgb(146, 255, 231);
  margin-top: 32px;
- }
+ border-radius: 16px;
+ -webkit-border-radius: 16px;
+ -moz-border-radius: 16px;
+ -ms-border-radius: 16px;
+ -o-border-radius: 16px;
+}
  .image-text{
     padding: 48px;
     display: flex;
@@ -192,8 +201,15 @@ align-items: center;
 border: 1px solid rgba(13, 19, 33, 0.2);
 border-radius: 16px;
 }
-.vai-section-image img{
-margin: 32px;
+.vai-section-image iframe{
+    height: 500px;
+    width: 94%;
+    border-radius: 16px;
+    margin: 32px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
 }
 /* vai section end */
 /* language icons */
@@ -329,12 +345,13 @@ color: rgba(255, 255, 255,.7);
 
 }
 .write-text{
-    width: 750px;
+    width: 684px;
     display: flex;
     justify-content: space-between;
+    margin: 0 auto;
 }
 input[type="text"]{
-    width: 600px;
+    width: 548px;
     height: 57px;
 border: 1px solid rgba(13, 19, 33, 0.15);
 border-radius: 8px;
@@ -342,6 +359,7 @@ padding: 19px 20px;
 background: rgb(255, 255, 255);
 color: rgba(13, 19, 33,0.4);
 font-weight: 400;
+
 }
 .write-text button{
     height:57px ;
