--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,10 @@
     word-spacing: -1px;
     font-style: normal
 }
+a{
+    text-decoration: none;
+    font-size: 20px;
+}
 /* shared style start */
 .main-width{
     width: 1440px;
@@ -338,10 +342,11 @@ background-blend-mode: overlay;
 color: rgb(255, 255, 255);
 }
 .handsek-container p{
-color: rgba(255, 255, 255,.7);
+color: rgba(255, 255, 255);
 }
 .handsek-container p{
  margin: 16px 0 24px 0;
+ opacity: 1;
 
 }
 .write-text{
@@ -353,8 +358,10 @@ color: rgba(255, 255, 255,.7);
 input[type="text"]{
     width: 548px;
     height: 57px;
+    font-size: 20px;
 border: 1px solid rgba(13, 19, 33, 0.15);
 border-radius: 8px;
+color: blue;
 padding: 19px 20px;
 background: rgb(255, 255, 255);
 color: rgba(13, 19, 33,0.4);
